# raysect-stubs

./: .gitignore  .lefthook.yaml  LICENSE  README.md  pixi.toml  pyproject.toml
scripts/: generate_stubs.py
src/raysect-stubs/: __init__.pyi
src/raysect-stubs/core/: __init__.pyi  boundingbox.pyi  boundingsphere.pyi  constants.pyi  containers.pyi  intersection.pyi  material.pyi  ray.pyi
src/raysect-stubs/core/acceleration/: __init__.pyi  accelerator.pyi  boundprimitive.pyi  kdtree.pyi  unaccelerated.pyi
src/raysect-stubs/core/math/: __init__.pyi  _mat4.pyi  _vec3.pyi  affinematrix.pyi  normal.pyi  point.pyi  polygon.pyi  quaternion.pyi  random.pyi  statsarray.pyi  transform.pyi  units.pyi  vector.pyi
src/raysect-stubs/core/math/cython/: tetrahedra.pyi  triangle.pyi  utility.pyi
src/raysect-stubs/core/math/function/: __init__.pyi  base.pyi
src/raysect-stubs/core/math/function/float/: __init__.pyi  base.pyi
src/raysect-stubs/core/math/function/float/function1d/: __init__.pyi  arg.pyi  autowrap.pyi  base.pyi  blend.pyi  cmath.pyi  constant.pyi  interpolate.pyi  samplers.pyi
src/raysect-stubs/core/math/function/float/function2d/interpolate/: __init__.pyi
src/raysect-stubs/core/math/function/vector3d/: base.pyi
src/raysect-stubs/core/math/sampler/: __init__.pyi  solidangle.pyi  surface3d.pyi  targeted.pyi
src/raysect-stubs/core/math/spatial/: __init__.pyi  kdtree2d.pyi  kdtree3d.pyi
src/raysect-stubs/core/scenegraph/: __init__.pyi  _nodebase.pyi  node.pyi  observer.pyi  primitive.pyi  signal.pyi  utility.pyi  world.pyi
src/raysect-stubs/optical/: __init__.pyi  loggingray.pyi  ray.pyi  spectralfunction.pyi  spectrum.pyi
src/raysect-stubs/optical/material/: __init__.pyi  absorber.pyi  material.pyi
src/raysect-stubs/optical/material/emitter/: inhomogeneous.pyi
src/raysect-stubs/optical/observer/base/: __init__.pyi  observer.pyi  pipeline.pyi  processor.pyi  sampler.pyi  slice.pyi
src/raysect-stubs/optical/observer/nonimaging/: targeted_pixel.pyi
src/raysect-stubs/optical/observer/pipeline/mono/: __init__.pyi  power.pyi  radiance.pyi
src/raysect-stubs/optical/scenegraph/: __init__.pyi  world.pyi
src/raysect-stubs/primitive/: __init__.pyi  box.pyi  csg.pyi
tests/: test_stubs.py
